Fixed bug associated with skeleton, tiny update of chat overflow.

--- a/style/main.css
+++ b/style/main.css
@@ -11,6 +11,7 @@
   bottom: 5px;
   right: 15px;
   z-index: 1000; /* .qa-error has z-index: 999 */
+  overflow: hidden;
 
   box-shadow: 0 0 15px rgba(0, 0, 0, .5);
 }
